# RobotOfTheRings

./: README.md  blob.cpp  comp2_map.pgm  comp2_map_3.pgm  comp2_map_3.yaml  cylinder.txt  example.py  filter.cpp  logicBehind.cpp  logic_behind_2.cpp  makeOccupancyGrid.cpp  map_comp.pgm  mapper  mapper.py  note.txt  pic_goals.cpp  ringApproach.cpp  send_goals.cpp  subscribe_to_image_topic.cpp  subscriber.cpp  turn.txt
CoordinatesCalculation/: CoordinatesCalculation.cbp  CoordinatesCalculation.layout  main.cpp
Cylinder detection/: cylinder.cpp  voxelgrid.cpp  zylinder.cpp
Exercises/cmakelists/: CMakeLists.txt  CMakeLists_1.txt  note.txt  package.xml
Exercises/exercise3/: map1.pgm
Exercises/exercise4/: CMakeLists.txt  CMakeLists.txt~
Exploration and logic/: logicBehind.cpp  makeOccupancyGrid.cpp  pickGoals.cpp  read_goals.hpp  send_goals.cpp  voice_commands.cpp
Exploration and logic/MakeCoordinates/: MakeCoordinates.cbp  MakeCoordinates.depend  MakeCoordinates.layout  main.cpp  reachable_goals.txt
Exploration and logic/launch files/: ring.launch  (+4 more)
Face detection and recognition/: faceRecognition.cpp  face_approach.cpp  mapper_final.py
MakeCoordinates/: MakeCoordinates.layout.cbTemp  build.xml
Maps/: Route_1.txt  Route_4.txt  comp2_map.yaml  map_comp.yaml  reachable_goals.txt
Ring detection/: blob.cpp  blob.cpp~  marker_array.py~
cylinder detection/: zylinderMapper.py
exercise2/: CMakeLists.txt
exercise3/: CMakeLists.txt  CMakeLists.txt~  map1.yaml
face detection and recognition/: faceMapper.py  mapper.py
maps/: comp2_map_2.pgm  comp2_map_2.yaml
(+39 files in other folders)
